--- a/.konflux/releaseplanadmissions/serverless-operator-135-1352-fbc-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1352-fbc-stage.yaml
@@ -20,7 +20,7 @@ spec:
     releaseNotes:
       product_id: [579]
       product_name: "OpenShift Serverless"
-      product_version: "1.35.2"
+      product_version: "fbc"
       references:
         - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
       type: "RHEA"
