--- a/.konflux/releaseplanadmissions/serverless-operator-135-1352-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1352-stage.yaml
@@ -3,7 +3,7 @@ apiVersion: appstudio.redhat.com/v1alpha1
 kind: ReleasePlanAdmission
 metadata:
   labels:
-    release.appstudio.openshift.io/auto-release: "true"
+    release.appstudio.openshift.io/block-releases: "false"
     pp.engineering.redhat.com/business-unit: hybrid-platforms
   name: serverless-operator-135-1352-stage
   namespace: rhtap-releng-tenant
@@ -16,133 +16,155 @@ spec:
       product_id: [579]
       product_name: "OpenShift Serverless"
       product_version: "1.35.2"
-      references:
-        - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
-      type: "RHEA"
-      solution: |
-        The Red Hat OpenShift Serverless Operator provides a collection of APIs that
-        enables containers, microservices and functions to run "serverless".
-        Serverless applications can scale up and down (to zero) on demand and be triggered by a
-        number of event sources. OpenShift Serverless integrates with a number of
-        platform services, such as Monitoring and it is based on the open
-        source project Knative.
-      description: "The 1.35.2 release of Red Hat OpenShift Serverless Operator."
-      topic: |
-        The 1.35.2 GA release of Red Hat OpenShift Serverless Operator.
-        For more details see [product documentation](https://docs.redhat.com/documentation/red_hat_openshift_serverless).
-      synopsis: "Red Hat OpenShift Serverless Release 1.35.2"
     mapping:
       components:
         - name: serverless-openshift-kn-operator-135
-          repository: registry.stage.redhat.io/openshift-serverless-1/serverless-openshift-kn-rhel8-operator
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/serverless-openshift-kn-rhel8-operator
           pushSourceContainer: true
         - name: serverless-kn-operator-135
-          repository: registry.stage.redhat.io/openshift-serverless-1/serverless-kn-operator-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/serverless-kn-operator-rhel8
           pushSourceContainer: true
         - name: serverless-ingress-135
-          repository: registry.stage.redhat.io/openshift-serverless-1/serverless-ingress-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/serverless-ingress-rhel8
           pushSourceContainer: true
         - name: kn-serving-queue-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-serving-queue-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-serving-queue-rhel8
           pushSourceContainer: true
         - name: kn-serving-activator-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-serving-activator-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-serving-activator-rhel8
           pushSourceContainer: true
         - name: kn-serving-autoscaler-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-serving-autoscaler-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-serving-autoscaler-rhel8
           pushSourceContainer: true
         - name: kn-serving-autoscaler-hpa-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-serving-autoscaler-hpa-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-serving-autoscaler-hpa-rhel8
           pushSourceContainer: true
         - name: kn-serving-controller-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-serving-controller-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-serving-controller-rhel8
           pushSourceContainer: true
         - name: kn-serving-webhook-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-serving-webhook-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-serving-webhook-rhel8
           pushSourceContainer: true
         - name: kn-serving-storage-version-migration-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-serving-storage-version-migration-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-serving-storage-version-migration-rhel8
           pushSourceContainer: true
         - name: net-kourier-kourier-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/net-kourier-kourier-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/net-kourier-kourier-rhel8
           pushSourceContainer: true
         - name: net-istio-controller-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/net-istio-controller-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/net-istio-controller-rhel8
           pushSourceContainer: true
         - name: net-istio-webhook-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/net-istio-webhook-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/net-istio-webhook-rhel8
           pushSourceContainer: true
         - name: kn-eventing-controller-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-controller-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-controller-rhel8
           pushSourceContainer: true
         - name: kn-eventing-istio-controller-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-istio-controller-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-istio-controller-rhel8
           pushSourceContainer: true
         - name: kn-eventing-webhook-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-webhook-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-webhook-rhel8
           pushSourceContainer: true
         - name: kn-eventing-migrate-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-migrate-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-migrate-rhel8
           pushSourceContainer: true
         - name: kn-eventing-mtchannel-broker-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-mtchannel-broker-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-mtchannel-broker-rhel8
           pushSourceContainer: true
         - name: kn-eventing-filter-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-filter-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-filter-rhel8
           pushSourceContainer: true
         - name: kn-eventing-ingress-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-ingress-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-ingress-rhel8
           pushSourceContainer: true
         - name: kn-eventing-channel-controller-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-channel-controller-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-channel-controller-rhel8
           pushSourceContainer: true
         - name: kn-eventing-channel-dispatcher-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-channel-dispatcher-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-channel-dispatcher-rhel8
           pushSourceContainer: true
         - name: kn-eventing-mtping-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-mtping-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-mtping-rhel8
           pushSourceContainer: true
         - name: kn-eventing-apiserver-receive-adapter-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-apiserver-receive-adapter-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-apiserver-receive-adapter-rhel8
           pushSourceContainer: true
         - name: kn-eventing-jobsink-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-jobsink-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-eventing-jobsink-rhel8
           pushSourceContainer: true
         - name: kn-backstage-plugins-eventmesh-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-backstage-plugins-eventmesh-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-backstage-plugins-eventmesh-rhel8
           pushSourceContainer: true
         - name: kn-plugin-event-sender-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-plugin-event-sender-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-plugin-event-sender-rhel8
           pushSourceContainer: true
         - name: kn-client-kn-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-client-kn-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-client-kn-rhel8
           pushSourceContainer: true
         - name: kn-plugin-func-func-util-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-plugin-func-func-util-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-plugin-func-func-util-rhel8
           pushSourceContainer: true
         - name: kn-ekb-receiver-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-receiver-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-receiver-rhel8
           pushSourceContainer: true
         - name: kn-ekb-dispatcher-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-dispatcher-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-dispatcher-rhel8
           pushSourceContainer: true
         - name: kn-ekb-kafka-controller-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-kafka-controller-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-kafka-controller-rhel8
           pushSourceContainer: true
         - name: kn-ekb-webhook-kafka-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-webhook-kafka-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-webhook-kafka-rhel8
           pushSourceContainer: true
         - name: kn-ekb-post-install-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-post-install-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-ekb-post-install-rhel8
           pushSourceContainer: true
         - name: serverless-must-gather-135
-          repository: registry.stage.redhat.io/openshift-serverless-1/serverless-must-gather-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/serverless-must-gather-rhel8
           pushSourceContainer: true
         - name: kn-client-cli-artifacts-115
-          repository: registry.stage.redhat.io/openshift-serverless-1/kn-client-cli-artifacts-rhel8
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/kn-client-cli-artifacts-rhel8
           pushSourceContainer: true
         - name: serverless-bundle-135
-          repository: registry.stage.redhat.io/openshift-serverless-1/serverless-operator-bundle
+          repositories:
+            - url: registry.stage.redhat.io/openshift-serverless-1/serverless-operator-bundle
           pushSourceContainer: true
       defaults:
         tags:
@@ -150,19 +172,9 @@ spec:
           - "{{ git_short_sha }}"
           - "1.35.2"
           - "1.35.2-{{ timestamp }}"
+        pushSourceContainer: true
     pyxis:
       secret: pyxis-staging-secret
-      server: stage
-      # This causes the release pipeline to not upload layer size information
-      # to pyxis which will save on runtime at the cost of data completeness in
-      # pyxis. The side-effects are:
-      # * If you are a base image, like ubi9, then partners cannot certify that they build on top of you.
-      # * Size information is not displayed in the catalog. This is very low business impact.
-      skipLayers: true
-    sign:
-      configMapName: hacbs-signing-pipeline-config-staging-redhatrelease2
-      cosignSecretName: konflux-cosign-signing-stage
-    atlas:
       server: stage
     intention: staging
   pipeline:
