--- a/.konflux/releaseplanadmissions/serverless-operator-136-1361-fbc-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-136-1361-fbc-prod.yaml
@@ -22,7 +22,7 @@ spec:
     releaseNotes:
       product_id: [579]
       product_name: "OpenShift Serverless"
-      product_version: "1.36.1"
+      product_version: "fbc"
       references:
         - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
       type: "RHEA"
